# aws-rust-sdk-otel-test

./: Cargo.toml  README.md
src/: main.rs
