[package]
name = "aws-rust-sdk-otel-test"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.0.0"
aws-sdk-dynamodb = "1.0.0"

opentelemetry = "0.24.0"
opentelemetry_sdk = { version = "0.24.1", features =["rt-tokio"]}
opentelemetry-semantic-conventions = "0.16.0"
opentelemetry-otlp = "0.17.0"

tokio = { version = "1.37.0", features = ["full"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.25.0"
